# Reconstruction3D

./: CMakeLists.txt
dataset/ITE_Logo/: ITE.yaml
scripts/: run.py
src/: FragmentMaker.cpp  FragmentMaker.h  FragmentsRegister.cpp  FragmentsRegister.h  Frame.cpp  Frame.h  GeometryMethods.cpp  GeometryMethods.h  GlobalRefiner.cpp  GlobalRefiner.h  Integrater.cpp  Integrater.h  LocalRefiner.cpp  LocalRefiner.h  PoseGraphMethods.cpp  PoseGraphMethods.h  Reconstruction.cpp  RegistrationMethods.cpp  RegistrationMethods.h
src/io/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
src/tests/: test_DBoW.cpp  test_global_refiner.cpp  test_integrater.cpp  test_local_refiner.cpp  test_make_fragments.cpp  test_register_fragments.cpp
src/util/: Converter.cpp  Converter.h  Parser.cpp  Parser.h
